java 11 niceties